Trabajo-Grupal-Taller-de-mercado-y-tecnologia-web-1/estilos.css/ESTILOS.CSS
@import url('Integrante1.css');
@import url('Integrante2.css');
@import url('Integrante3.css');
@import url('Integrante4.css');



.mi-nav-negra {
    background-color: #000 !important;
    width: 100% !important;
    min-height: 60px !important;
    display: flex !important;
    padding: 10px 20px !important;
}


.mi-nav-negra .nav-link {
    color: #ffffff !important;
    font-weight: bold !important;
}

.mi-nav-negra .nav-link:hover {
    color: #cccccc !important;
}


@media (min-width: 992px) {
    .show-pc {
        display: flex !important;
        flex-basis: auto;
    }
    .navbar-toggler {
        display: none !important;
    }
    .navbar-nav {
        flex-direction: row !important;
        gap: 50px !important;
    }
}


.navbar {
    width: 100% !important;
    padding-left: 0 !important;
    padding-right: 0 !important;
}





header, main, footer, section {
    width: 100% !important;
    padding-left: 5% !important;
    padding-right: 5% !important;
    box-sizing: border-box !important;
}

main {
    max-width: 1200px !important;
    margin: 0 auto !important;
}


.py-5 .container {
    display: flex !important;
    flex-wrap: wrap !important;
    gap: 20px !important;
    align-items: center !important;
    max-width: 1200px !important;
}

.py-5 .Col-md-4 {
    flex: 1 1 300px !important;
    padding: 10px !important;
}

.img-programa {
    width: 100% !important;
    height: auto !important;
    max-height: 400px !important;
    object-fit: contain !important;
}


/* botton modo oscuro */

body.oscuro {
    background-color: #22252a !important;
}

body.oscuro h1, 
body.oscuro h2 {
    color: #ffffff !important;
}

body.oscuro .container,
body.oscuro .bs-card,
body.oscuro [class*="card"] {
    background-color: #f1f3f5 !important;
    color: #212529 !important;
}

/* boton apariencia*/

#btn-modo {
    background-color: #ffffff !important;
    color: #000000 !important;
    font-weight: bold !important;
}

body.oscuro #btn-modo {
    background-color: #ffc107 !important;
    color: #000000 !important;
}


/* Completa el formulario */
body.oscuro p{
    color: #ffffff !important;
}

/* ¿Cómo comenzó esto? */
body.oscuro h2{
    color: deepskyblue !important;
}

